Fix: default illustrations too wide for new layout

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -149,7 +149,7 @@ article .content button {
 }
 
 .illustration {
-  max-width: 400px;
+  max-width: 250px;
   float: right;
   padding-left: 1em;
 }
